# Taida-Factory

./: .CMakeLists.txt.swp  CMakeLists.txt  LICENSE  README.md
ext/glad/: CMakeLists.txt
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
include/: core.h  graphics.h  log.h  primitives.h  time.h  window.h
include/Taida/: taidaCore.h  taidaGraphics.h
include/Taida/Core/: core.h  log.h  time.h  window.h
include/Taida/Graphics/: images.h  shaders.h  shapes.h  texture.h
res/: cube
src/: CMakeLists.txt  graphics.c  log.c  main.c  primitives.c  time.c  window.c
src/Taida/Core/: CMakeLists.txt  log.c  time.c  window.c
src/Taida/Graphics/: CMakeLists.txt  images.c  shaders.c  shapes.c  texture.c
